--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 { 
+     "homepage": "https//:/codeebytee,github.io/React-Portfolio",
     "name": "React-Port",
     "version": "0.1.0",
     "private": true,
